--- a/manifests/tetris-deploy.yaml
+++ b/manifests/tetris-deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: tetris
-          image: latchudevops/register-app-pipeline # Replace with the actual image tag
+          image: latchudevops/netflix
           ports:
-            - containerPort: 80 # Replace with the port your Tetris game listens on
+            - containerPort: 80
