--- a/manifests/tetris-svc.yaml
+++ b/manifests/tetris-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tetris-service
+  name: netflix-service
 spec:
   selector:
-    app: tetris
+    app: netflix
   ports:
     - protocol: TCP
       port: 80
